modificari pentru afișare

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     
     <head>
         <link rel="shortcut icon" type="image/x-icon" href="../IMG/favicon.ico"/>
-        <link rel="stylesheet" type="text/css" href="../CSS/CSSGENERAL.css">
-        <link rel="stylesheet" type="text/css" href="../CSS/Index.css">
+        <link rel="stylesheet" type="text/css" href="./CSS/CSSGENERAL.css">
+        <link rel="stylesheet" type="text/css" href="./CSS/Index.css">
         <meta charset="UTF-8">
         <meta name="author" content="Gherasim Rares">
         <meta name="description" content="Personal training si diete online">
@@ -16,20 +16,20 @@
         <header>
             <nav id="NavBar">
                 <a id="Logo" href="#">
-                    <img src="../IMG/favicon.ico" alt="Logo-ul nu a putut fi afișat.">
+                    <img src="./IMG/favicon.ico" alt="Logo-ul nu a putut fi afișat.">
                 </a>
                 <ul id="Butoane navigatie">
-                    <li><a id="LogIn" href="./LogIn.html">Formular de contact</a></li>
-                    <li><a id="Diets" href="./Diets.html">Diete</a></li>
-                    <li><a id="Workouts" href="./Workouts.html">Antrenamente</a></li>
-                    <li><a id="WhoAmI" href="./CineSuntEu.html">Despre mine</a></li>
-                    <li><a id="Home" href="./Index.html">Acasă</a></li>
+                    <li><a id="LogIn" href="./0HTML/LogIn.html">Formular de contact</a></li>
+                    <li><a id="Diets" href="./0HTML/Diets.html">Diete</a></li>
+                    <li><a id="Workouts" href="./0HTML/Workouts.html">Antrenamente</a></li>
+                    <li><a id="WhoAmI" href="./0HTML/CineSuntEu.html">Despre mine</a></li>
+                    <li><a id="Home" href="./index.html">Acasă</a></li>
                 </ul>
             </nav>
         </header>
         
         <main>
-            <img src="../IMG/1.jpg" arl="Imaginea principala nu s-a putut afișa.">
+            <img src="./IMG/1.jpg" arl="Imaginea principala nu s-a putut afișa.">
             <article id="Scop">
                 <section id="Viață sănătoasă">
                     <h2>Ce însemnă o viață sănătoasă?</h2>
