--- a/0HTML/Diets.html
+++ b/0HTML/Diets.html
@@ -22,7 +22,7 @@
                     <li><a id="Diets" href="./Diets.html">Diete</a></li>
                     <li><a id="Workouts" href="./Workouts.html">Antrenamente</a></li>
                     <li><a id="WhoAmI" href="./CineSuntEu.html">Despre mine</a></li>
-                    <li><a id="Home" href="./index.html">Acasă</a></li>
+                    <li><a id="Home" href="../index.html">Acasă</a></li>
                 </ul>
             </nav>
         </header>
