Incercare de adaugare dropdown

--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
                 <ul id="Butoane navigatie">
                     <li><a id="LogIn" href="./0HTML/LogIn.html">Formular de contact</a></li>
                     <li><a id="Diets" href="./0HTML/Diets.html">Diete</a></li>
-                    <li><a id="Workouts" href="./0HTML/Workouts.html">Antrenamente</a></li>
+                    <li class="dropdown">
+                        <a class="dropbutton">Antrenamente</a>
+                        <div class="dropdown-content">
+                            <li><a href="#">Slăbit</a></li>
+                            <li><a href="#">Masă Musculară</a></li>
+                            <li><a href="#">Mentinere</a></li>
+                        </div>
+                    </li>
                     <li><a id="WhoAmI" href="./0HTML/CineSuntEu.html">Despre mine</a></li>
                     <li><a id="Home" href="./index.html">Acasă</a></li>
                 </ul>
