--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                     <li><a id="Diets" href="./0HTML/Diets.html">Diete</a></li>
                     <li class="dropdown">
                         <a class="dropbutton">Antrenamente</a>
-                        <div class="dropdown-content">
+                        <ul class="dropdown-content">
                             <li><a href="#">Slăbit</a></li>
                             <li><a href="#">Masă Musculară</a></li>
                             <li><a href="#">Mentinere</a></li>
-                        </div>
+                        </ul>
                     </li>
                     <li><a id="WhoAmI" href="./0HTML/CineSuntEu.html">Despre mine</a></li>
                     <li><a id="Home" href="./index.html">Acasă</a></li>
