--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         
         <main>
             <img src="./IMG/1.jpg" arl="Imaginea principala nu s-a putut afișa.">
-            <article id="Scop">
+            <div id="Scop">
                 <section id="Viață sănătoasă">
                     <h2>Ce însemnă o viață sănătoasă?</h2>
                     <p>O viață sănătoasă din punct de vedere fizic este cel mai bine reprezentată prin: o dietă echilibrată, sport constant și odihnă. O dietă echilibrată trebuie să fie realizată în așa fel încât să vă ajute să va realizați țelurile, aceasta putând fi de mai multe feluri: pentru slăbit, pentru îngrășare sau pentru dezvoltarea masei musculare. Sportul, pentru a îmbunătății starea de bine a organismului, trebuie practicat de cel puțin două ori pe săptămână.</p>
@@ -57,7 +57,7 @@
                     <h2>Dorești recomandări diversificate și personalizate?</h2>
                     <p>Pentru persoanele care doresc antrenamente adaptate pentru fizicul lor, dar și diete care le vor crește rezultate exponențial în cel mai scurt timp, am creat si opțiunea de antrenor personal online. Pentru o sumă modică vă pot oferi asistență online 24/7, antrenament personalizate și diete cu rezultate dovedite. Dacă ești din București și îți dorești un antrenament cu mine, putem chiar să ne întâlnim și să te antrenez personal la una dintre sălile din zona Afi Palace Cotroceni.</p>
                 </section>
-            </article>
+            </div>
         </main>
         
         <footer>
