--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     
     <body style="background-color:black;">
         <header>
-            <nav id="NavBar">
+            <nav class="wrapper">
                 <a id="Logo" href="#">
                     <img src="./IMG/favicon.ico" alt="Logo-ul nu a putut fi afișat.">
                 </a>
-                <ul id="Butoane navigatie">
+                <ul class="menu">
                     <li><a id="LogIn" href="./0HTML/LogIn.html">Formular de contact</a></li>
                     <li><a id="Diets" href="./0HTML/Diets.html">Diete</a></li>
-                    <li class="dropdown">
-                        <a class="dropbutton">Antrenamente</a>
-                        <ul class="dropdown-content">
+                    <li>
+                        <div>Antrenamente</div>
+                        <ul class="submenu">
                             <li><a href="#">Slăbit</a></li>
                             <li><a href="#">Masă Musculară</a></li>
                             <li><a href="#">Mentinere</a></li>
