Stil NavBar + Dropdown

--- a/0HTML/Workouts.html
+++ b/0HTML/Workouts.html
@@ -13,16 +13,23 @@
     
     <body style="background-color:black;">
         <header>
-            <nav id="NavBar">
+            <nav class="wrapper">
                 <a id="Logo" href="#">
-                    <img src="../IMG/favicon.ico" alt="Logo-ul nu a putut fi afișat.">
+                    <img src="./IMG/favicon.ico" alt="Logo-ul nu a putut fi afișat.">
                 </a>
-                <ul id="Butoane navigatie">
-                    <li><a id="LogIn" href="./LogIn.html">Formular de contact</a></li>
-                    <li><a id="Diets" href="./Diets.html">Diete</a></li>
-                    <li><a id="Workouts" href="./Workouts.html">Antrenamente</a></li>
-                    <li><a id="WhoAmI" href="./CineSuntEu.html">Despre mine</a></li>
-                    <li><a id="Home" href="../index.html">Acasă</a></li>
+                <ul class="menu">
+                    <li><a id="LogIn" href="./0HTML/LogIn.html">Formular de contact</a></li>
+                    <li><a id="Diets" href="./0HTML/Diets.html">Diete</a></li>
+                    <li>
+                        <div>Antrenamente</div>
+                        <ul class="submenu">
+                            <li><a href="#">Slăbit</a></li>
+                            <li><a href="#">Masă Musculară</a></li>
+                            <li><a href="#">Mentinere</a></li>
+                        </ul>
+                    </li>
+                    <li><a id="WhoAmI" href="./0HTML/CineSuntEu.html">Despre mine</a></li>
+                    <li><a id="Home" href="./index.html">Acasă</a></li>
                 </ul>
             </nav>
         </header>
