--- a/index.html
+++ b/index.html
@@ -12,15 +12,20 @@
         <title>Gherasim Fitness Homepage</title>
     </head>
     
-    <body style="background-color:black;">
+    <body style="background-color: black">
         <header>
             <nav class="wrapper">
                 <a id="Logo" href="#">
                     <img src="./IMG/favicon.ico" alt="Logo-ul nu a putut fi afișat.">
                 </a>
                 <ul class="menu">
-                    <li><a id="LogIn" href="./0HTML/LogIn.html">Formular de contact</a></li>
-                    <li><a id="Diets" href="./0HTML/Diets.html">Diete</a></li>
+                    <li><a id="LogIn" href="./0HTML/LogIn.html">Contact</a></li>
+                    <li><div>Diete</div>
+                        <ul class="submenu">
+                            <li><a href="#">Slăbit</a></li>
+                            <li><a href="#">Masă Musculară</a></li>
+                            <li><a href="#">Mentinere</a></li>
+                        </ul>
                     <li>
                         <div>Antrenamente</div>
                         <ul class="submenu">
@@ -29,7 +34,7 @@
                             <li><a href="#">Mentinere</a></li>
                         </ul>
                     </li>
-                    <li><a id="WhoAmI" href="./0HTML/CineSuntEu.html">Despre mine</a></li>
+                    <li><a id="WhoAmI" href="./0HTML/CineSuntEu.html">Despre</a></li>
                     <li><a id="Home" href="./index.html">Acasă</a></li>
                 </ul>
             </nav>
