--- a/0HTML/CineSuntEu.html
+++ b/0HTML/CineSuntEu.html
@@ -14,15 +14,28 @@
     
     <body style="background-color:black;">
         <header>
-            <nav id="NavBar">
+            <nav class="wrapper">
                 <a id="Logo" href="#">
                     <img src="../IMG/favicon.ico" alt="Logo-ul nu a putut fi afișat.">
                 </a>
-                <ul id="Butoane navigatie">
-                    <li><a id="LogIn" href="./LogIn.html">Formular de contact</a></li>
-                    <li><a id="Diets" href="./Diets.html">Diete</a></li>
-                    <li><a id="Workouts" href="./Workouts.html">Antrenamente</a></li>
-                    <li><a id="WhoAmI" href="./CineSuntEu.html">Despre mine</a></li>
+                <ul class="menu">
+                    <li><a id="LogIn" href="./LogIn.html">Contact</a></li>
+                    <li><div>Diete</div>
+                        <ul class="submenu">
+                            <li><a href="#">Slăbit</a></li>
+                            <li><a href="#">Masă Musculară</a></li>
+                            <li><a href="#">Mentinere</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <div>Antrenamente</div>
+                        <ul class="submenu">
+                            <li><a href="#">Slăbit</a></li>
+                            <li><a href="#">Masă Musculară</a></li>
+                            <li><a href="#">Mentinere</a></li>
+                        </ul>
+                    </li>
+                    <li><a id="WhoAmI" href="./CineSuntEu.html">Despre</a></li>
                     <li><a id="Home" href="../index.html">Acasă</a></li>
                 </ul>
             </nav>
