--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                 </a>
                 <ul class="menu">
                     <li><a id="LogIn" href="./0HTML/LogIn.html">Contact</a></li>
-                    <li><div>Diete</div>
+                    <li>
+                        <div>Diete</div>
                         <ul class="submenu">
                             <li><a href="#">Slăbit</a></li>
                             <li><a href="#">Masă Musculară</a></li>
