Added @media for 1st and 2nd pages

--- a/0HTML/CineSuntEu.html
+++ b/0HTML/CineSuntEu.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="../CSS/CSSGENERAL.css">
         <link rel="stylesheet" type="text/css" href="../CSS/CineSuntEu.css">
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Gherasim Rares">
         <meta name="description" content="Personal training si diete online">
         <meta name="keyword" content="Culturism, Descriere, Prezentare,Istoric ">
@@ -20,13 +21,7 @@
                 </a>
                 <ul class="menu">
                     <li><a id="LogIn" href="./LogIn.html">Contact</a></li>
-                    <li><div>Diete</div>
-                        <ul class="submenu">
-                            <li><a href="#">Slăbit</a></li>
-                            <li><a href="#">Mentinere</a></li>
-                            <li><a href="#">Masă Musculară</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="./0HTML/Diets.html">Diet</a></li>
                     <li>
                         <div>Antrenamente</div>
                         <ul class="submenu">
@@ -44,21 +39,19 @@
         <main>
             <img src="../IMG/2.jpg" arl="Imaginea principala nu s-a putut afișa.">
             <div id ="Scurta prezentare">
-                <section>
-                    <h2>Bună ziua,</h2>
-                        <p>Numele meu este Gherasim Rareș, am vârsta de 18 ani și sunt student în anul I la Universitatea București, Facultatea de Matematică și Informatică, specializarea Informatică. Locuiesc în București din luna octombrie a anului 2019, perioadă în care am început și facultatea. În ultimii ani, pasiunile carora le-am dedicat cea mai mare parte din timpul meu au fost dezvoltarea cunoștiițelor de antrenor personal și informatică.</p>
-                </section>
-                <section>
+                <section class="grid-container">
+                <h2>Bună ziua,</h2>
+                    <p>Numele meu este Gherasim Rareș, am vârsta de 18 ani și sunt student în anul I la Universitatea București, Facultatea de Matematică și Informatică, specializarea Informatică. Locuiesc în București din luna octombrie a anului 2019, perioadă în care am început și facultatea. În ultimii ani, pasiunile carora le-am dedicat cea mai mare parte din timpul meu au fost dezvoltarea cunoștiițelor de antrenor personal și informatică.</p>
                     <p>Am început să practic sport încă de când eram în clasa a I-a. Primul sport pe care l-am practicat până la nivelul de competiție a fost schiatul. După o perioadă de aproximativ 6 ani am vrut să încerc și alte sporturi și m-am lăsat de schi. Ulterior am practic următoarele sporturi: fotbal, handbal, tenis și înot. În momentul de față mai schiez foarte rar, doar iarna când am timp liber, dar încerc sa combin culturismul cu baschetul deoarece mă simt foarte bine practicându-le pe ambele.</p>
+                    <p>Practic culturismul de 4 ani. În urmă cu un an am participat la o serie de cursuri care m-au ajutat să îmi obțin certificarea de antrenor personal nivel 4, obținunând calificarea de a instrui alți oameni în acest domeniu vast.</p> 
+                    <p>Mă consider pregătit pentru a introduce oameni noi în acest domeniu deoarece pe parcusul acestor trei ani am trecut prin multe etape, ajungând să cunosc o multitudine de exerciții și modul în care acestea se execută corect, fără a-mi pune în pericol integritatea personală. De altfel, am avut mulți prieteni neexperimentați care m-au rugat să îi ajut cu recomandări și sfaturi la sală, care ultirior mi-au mulțumit și mi-au zis cât de bine se simt de când au început să practice acest sport complex.</p>
+                    <img src="../IMG/_MG_6215.jpg">
                 </section>
-                <section>
-                    <p>Practic culturismul de 4 ani. În urmă cu un an am participat la o serie de cursuri care m-au ajutat să îmi obțin certificarea de antrenor personal nivel 4, obținunând calificarea de a instrui alți oameni în acest domeniu vast. Mă consider pregătit pentru a introduce oameni noi în acest domeniu deoarece pe parcusul acestor trei ani am trecut prin multe etape, ajungând să cunosc o multitudine de exerciții și modul în care acestea se execută corect, fără a-mi pune în pericol integritatea personală. De altfel, am avut mulți prieteni neexperimentați care m-au rugat să îi ajut cu recomandări și sfaturi la sală, care ultirior mi-au mulțumit și mi-au zis cât de bine se simt de când au început să practice acest sport complex.</p>
-                </section>
-                <section id ="Tabel">
+                <section class ="Tabel">
                     <br><br>
                     <p>În următorul tabel o să vă prezint programul meu, respectiv orele în care sunt liber și vă pot răspunde la mesaje sau chiar să vă acompaniez pentru un antrenament la sala de fitness.</p>
-                    <table>
-                        <caption><u>Program antrenamente la sală:</u></caption> <br><br>
+                    <table class="tabel">
+                        <caption>Program antrenamente la sală:</caption> <br><br>
                         <thead>
                             <th>######</th>
                             <th>Luni</th>
@@ -143,7 +136,7 @@
                         </tbody>
                         <tfoot>
                             <tr>
-                                <td colspan="8">Zilele de sâmbătă și duminică pot sa difere în funcție de avabilitatea mea.</td>
+                                <td colspan="8">*Zilele de sâmbătă și duminică pot sa difere în funcție de avabilitatea mea.</td>
                             </tr>
                         </tfoot>
                     </table>
