--- a/0HTML/LogIn.html
+++ b/0HTML/LogIn.html
@@ -5,6 +5,7 @@
         <link rel="shortcut icon" type="image/x-icon" href="../IMG/favicon.ico"/>
         <link rel="stylesheet" type="text/css" href="../CSS/CSSGENERAL.css">
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Gherasim Rares">
         <meta name="description" content="Personal training si diete online">
         <meta name="keyword" content="Contact, Formular, Informatii suplimentare ">
@@ -19,12 +20,7 @@
                 </a>
                 <ul class="menu">
                     <li><a id="LogIn" href="./LogIn.html">Contact</a></li>
-                    <li><div>Diete</div>
-                        <ul class="submenu">
-                            <li><a href="#">Slăbit</a></li>
-                            <li><a href="#">Mentinere</a></li>
-                            <li><a href="#">Masă Musculară</a></li>
-                        </ul>
+                    <li><a href="./0HTML/Diets.html">Diet</a></li>li>
                     <li>
                         <div>Antrenamente</div>
                         <ul class="submenu">
