--- a/0HTML/Workouts.html
+++ b/0HTML/Workouts.html
@@ -5,6 +5,7 @@
         <link rel="shortcut icon" type="image/x-icon" href="../IMG/favicon.ico"/>
         <link rel="stylesheet" type="text/css" href="../CSS/CSSGENERAL.css">
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Gherasim Rares">
         <meta name="description" content="Personal training si diete online">
         <meta name="keyword" content="Antrenamente,Slabit,Ingrasare,Dezboltare Musculara,Mentinere ">
