--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="./CSS/CSSGENERAL.css">
         <link rel="stylesheet" type="text/css" href="./CSS/Index.css">
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Gherasim Rares">
         <meta name="description" content="Personal training si diete online">
         <meta name="keyword" content="Fitnes, Sala, Antrenor Personal, Diete">
@@ -20,14 +21,7 @@
                 </a>
                 <ul class="menu">
                     <li><a id="LogIn" href="./0HTML/LogIn.html">Contact</a></li>
-                    <li>
-                        <div>Diete</div>
-                        <ul class="submenu">
-                            <li><a href="#">Slăbit</a></li>
-                            <li><a href="#">Mentinere</a></li>
-                            <li><a href="#">Masă Musculară</a></li>
-                        </ul>
-                    <li>
+                    <li><a href="./0HTML/Diets.html">Diet</a><li>
                         <div>Antrenamente</div>
                         <ul class="submenu">
                             <li><a href="#">Slăbit</a></li>
@@ -69,14 +63,14 @@
         <footer>
             <hr>
             <a href="#">~Revino la început~</a>
-            <br/><u>Contact:</u> 
+            <br/><p>Contact:</p> 
             <ul>
                 <li>E-mail: <a href="mailto:rares33@yahoo.com">rares33@yahoo.com</a></li>
                 <li>Telefon: 0746018999
                 </li>
                 <li><adress>Adresă: București, Sector 6, Aleea Romancierilor, Bloc Z17
                     </adress></li>
-                </ul>
+            </ul>
         </footer>
         
     </body>
