--- a/0HTML/CineSuntEu.html
+++ b/0HTML/CineSuntEu.html
@@ -45,7 +45,7 @@
                     <p>Am început să practic sport încă de când eram în clasa a I-a. Primul sport pe care l-am practicat până la nivelul de competiție a fost schiatul. După o perioadă de aproximativ 6 ani am vrut să încerc și alte sporturi și m-am lăsat de schi. Ulterior am practic următoarele sporturi: fotbal, handbal, tenis și înot. În momentul de față mai schiez foarte rar, doar iarna când am timp liber, dar încerc sa combin culturismul cu baschetul deoarece mă simt foarte bine practicându-le pe ambele.</p>
                     <p>Practic culturismul de 4 ani. În urmă cu un an am participat la o serie de cursuri care m-au ajutat să îmi obțin certificarea de antrenor personal nivel 4, obținunând calificarea de a instrui alți oameni în acest domeniu vast.</p> 
                     <p>Mă consider pregătit pentru a introduce oameni noi în acest domeniu deoarece pe parcusul acestor trei ani am trecut prin multe etape, ajungând să cunosc o multitudine de exerciții și modul în care acestea se execută corect, fără a-mi pune în pericol integritatea personală. De altfel, am avut mulți prieteni neexperimentați care m-au rugat să îi ajut cu recomandări și sfaturi la sală, care ultirior mi-au mulțumit și mi-au zis cât de bine se simt de când au început să practice acest sport complex.</p>
-                    <img src="../IMG/_MG_6215.jpg">
+                    <img src="../IMG/Me.jpg">
                 </section>
                 <section class ="Tabel">
                     <br><br>
