--- a/0HTML/Diets.html
+++ b/0HTML/Diets.html
@@ -24,9 +24,9 @@
                     <li>
                         <div>Antrenamente</div>
                         <ul class="submenu">
-                            <li><a href="#">Slăbit</a></li>
-                            <li><a href="#">Masă Musculară</a></li>
-                            <li><a href="#">Mentinere</a></li>
+                            <li><a href="./Workouts-Slabit.html">Slăbit</a></li>
+                            <li><a href="./Workouts-Mentinere.html">Mentinere</a></li>
+                            <li><a href="./Workouts-Mas%C4%83Musculara.html">Masă Musculară</a></li>
                         </ul>
                     </li>
                     <li><a id="WhoAmI" href="./CineSuntEu.html">Despre</a></li>
