--- a/0HTML/Workouts-Mentinere.html
+++ b/0HTML/Workouts-Mentinere.html
@@ -8,8 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Gherasim Rares">
         <meta name="description" content="Personal training si diete online">
-        <meta name="keyword" content="Contact, Formular, Informatii suplimentare ">
-        <title>Formular de înregistrare</title>
+        <meta name="keyword" content="Menținere,fitness,culturism,antrenamente personale,Mentinere">
+        <title>Antrenamente pentru menținere</title>
     </head>
     
     <body style="background-color:black;">
@@ -20,7 +20,7 @@
                 </a>
                 <ul class="menu">
                     <li><a id="LogIn" href="./LogIn.html">Contact</a></li>
-                    <li><a href="./0HTML/Diets.html">Diet</a></li>li>
+                    <li><a id="Diets" href="./Diets.html">Diete</a></li>
                     <li>
                         <div>Antrenamente</div>
                         <ul class="submenu">
