--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
                 </a>
                 <ul class="menu">
                     <li><a id="LogIn" href="./0HTML/LogIn.html">Contact</a></li>
-                    <li><a href="./0HTML/Diets.html">Diet</a><li>
+                    <li><a href="./0HTML/Diets.html">Diete</a> </li>
+                    <li>
                         <div>Antrenamente</div>
                         <ul class="submenu">
-                            <li><a href="#">Slăbit</a></li>
-                            <li><a href="#">Mentinere</a></li>
-                            <li><a href="#">Masă Musculară</a></li>
+                            <li><a href="./0HTML/Workouts-Slabit.html">Slăbit</a></li>
+                            <li><a href="./0HTML/Workouts-Mentinere.html">Mentinere</a></li>
+                            <li><a href="./0HTML/Workouts-Mas%C4%83Musculara.html">Masă Musculară</a></li>
                         </ul>
                     </li>
                     <li><a id="WhoAmI" href="./0HTML/CineSuntEu.html">Despre</a></li>
@@ -36,7 +37,7 @@
         </header>
         
         <main>
-            <img src="./IMG/1.jpg" arl="Imaginea principala nu s-a putut afișa.">
+            <img src="./IMG/11.jpg" arl="Imaginea principala nu s-a putut afișa.">
             <div id="Scop">
                 <section id="Viață sănătoasă">
                     <h2>Ce însemnă o viață sănătoasă?</h2>
