--- a/0HTML/CineSuntEu.html
+++ b/0HTML/CineSuntEu.html
@@ -25,9 +25,9 @@
                     <li>
                         <div>Antrenamente</div>
                         <ul class="submenu">
-                            <li><a href="#">Slăbit</a></li>
-                            <li><a href="#">Mentinere</a></li>
-                            <li><a href="#">Masă Musculară</a></li>
+                            <li><a href="./Workouts-Slabit.html">Slăbit</a></li>
+                            <li><a href="./Workouts-Mentinere.html">Mentinere</a></li>
+                            <li><a href="./Workouts-Mas%C4%83Musculara.html">Masă Musculară</a></li>
                         </ul>
                     </li>
                     <li><a id="WhoAmI" href="./CineSuntEu.html">Despre</a></li>
@@ -38,7 +38,7 @@
         
         <main>
             <img src="../IMG/2.jpg" arl="Imaginea principala nu s-a putut afișa.">
-            <div id ="Scurta prezentare">
+            <div id ="Scurtaprezentare">
                 <section class="grid-container">
                 <h2>Bună ziua,</h2>
                     <p>Numele meu este Gherasim Rareș, am vârsta de 18 ani și sunt student în anul I la Universitatea București, Facultatea de Matematică și Informatică, specializarea Informatică. Locuiesc în București din luna octombrie a anului 2019, perioadă în care am început și facultatea. În ultimii ani, pasiunile carora le-am dedicat cea mai mare parte din timpul meu au fost dezvoltarea cunoștiițelor de antrenor personal și informatică.</p>
