--- a/0HTML/Workouts-Galerie.html
+++ b/0HTML/Workouts-Galerie.html
@@ -8,8 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Gherasim Rares">
         <meta name="description" content="Personal training si diete online">
-        <meta name="keyword" content="Diete,Slabit,Ingrasare,Dezboltare Musculara,Mentinere">
-        <title>Diete</title>
+        <meta name="keyword" content="Menținere,fitness,culturism,antrenamente personale,Mentinere">
+        <title>Antrenamente pentru menținere</title>
     </head>
     
     <body style="background-color:black;">
@@ -25,7 +25,7 @@
                         <div>Antrenamente</div>
                         <ul class="submenu">
                             <li><a href="./Workouts-Slabit.html">Slăbit</a></li>
-                            <li><a href="./Workouts-Galerie.html">Galerie</a></li>
+                            <li><a href="./Workouts-Mentinere.html">Mentinere</a></li>
                             <li><a href="./Workouts-Mas%C4%83Musculara.html">Masă Musculară</a></li>
                         </ul>
                     </li>
