--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <div>Antrenamente</div>
                         <ul class="submenu">
                             <li><a href="./0HTML/Workouts-Slabit.html">Slăbit</a></li>
-                            <li><a href="./0HTML/Workouts-Mentinere.html">Mentinere</a></li>
+                            <li><a href="./0HTML/Workouts-Galerie.html">Galerie</a></li>
                             <li><a href="./0HTML/Workouts-Mas%C4%83Musculara.html">Masă Musculară</a></li>
                         </ul>
                     </li>
