--- a/index.html
+++ b/index.html
@@ -38,27 +38,28 @@
         
         <main>
             <img src="./IMG/11.jpg" arl="Imaginea principala nu s-a putut afișa.">
-            <div id="Scop">
-                <section id="Viață sănătoasă">
+            <section id="Scop">
+                <article id="Viață sănătoasă">
                     <h2>Ce însemnă o viață sănătoasă?</h2>
                     <p>O viață sănătoasă din punct de vedere fizic este cel mai bine reprezentată prin: o dietă echilibrată, sport constant și odihnă. O dietă echilibrată trebuie să fie realizată în așa fel încât să vă ajute să va realizați țelurile, aceasta putând fi de mai multe feluri: pentru slăbit, pentru îngrășare sau pentru dezvoltarea masei musculare. Sportul, pentru a îmbunătății starea de bine a organismului, trebuie practicat de cel puțin două ori pe săptămână.</p>
-                </section>
+                </article>
                 <br>
-                <section id="Scopul meu">
+                <article id="Scopul meu">
                     <h2>Cu ce te pot ajuta?</h2>
                     <p>Dacă ești gata să renunți la rutină și să faci o schimbare spre un stil de viață mai sănătos și mai satisfăcator, dar nu știi de unde sa incepi, înseamna că ai ajuns în locul potrivit. Pe acest site o să găsești o multitudine de tipuri de antrenamente și diete gratis pe care le poți încearca pentru a-ți atinge țelurile. De alfel, dacă îți dorești să ai parte de mai multă asistență pe parcursul acestui proces, poți aplica pentru un program de antrenament personalizat, care va fi creat special pentru dorințele si nevoile tale.</p>
-                </section>
+                </article>
                 <br>
-                <section id="Leneș">
+                <article id="Leneș">
                     <h2>"Mi se pare o bătaie de cap prea mare să fac sport constant și să am grijă la ce mănânc."</h2>
                     <p>Și eu am crezut asta. La început, în primele săptămâni, totul parea complicat: antrenamente complicate la sală, ținut cont de fiecare aliment pentru dietă, dar și odihna mai îndelungată necesară dupa o zi activă. Pot să spun ca după prima lună(care este și cea mai importantă) corpul meu a început să fie mai energetic, simțeam nevoia să practic un sport pentru a consuma surplus de energie resimțit, iar urmărirea nutrienților fiecărui aliment consumat a devenit ceva normal, aproape realizat din reflex. Nu mai spun de rezultatele care se vedeau și îmi stârneau dorința să continui. Da, o să pară greu la început, dar după puțin timp, starea de bine generală îmbunătățită și rezultatele o să fie destul cât să vă motiveze să nu renunțați.</p>
-                </section>
+                </article>
                 <br>
-                <section>
+                <article>
                     <h2>Dorești recomandări diversificate și personalizate?</h2>
                     <p>Pentru persoanele care doresc antrenamente adaptate pentru fizicul lor, dar și diete care le vor crește rezultate exponențial în cel mai scurt timp, am creat si opțiunea de antrenor personal online. Pentru o sumă modică vă pot oferi asistență online 24/7, antrenament personalizate și diete cu rezultate dovedite. Dacă ești din București și îți dorești un antrenament cu mine, putem chiar să ne întâlnim și să te antrenez personal la una dintre sălile din zona Afi Palace Cotroceni.</p>
-                </section>
-            </div>
+                </article>
+                <h2>PENTRU ANTRENAMENTE PERSONALIZATE, COMPLETAȚI <a href="./LogIn.html">ACEST</a> FORMULAR.</h2>
+            </section>
         </main>
         
         <footer>
