--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         </header>
         
         <main>
-            <img src="./IMG/11.jpg" arl="Imaginea principala nu s-a putut afișa.">
+            <img src="./IMG/11.jpg" alt="Imaginea principala nu s-a putut afișa.">
             <section id="Scop">
-                <article id="Viață sănătoasă">
+                <article id="Viațăsănătoasă">
                     <h2>Ce însemnă o viață sănătoasă?</h2>
                     <p>O viață sănătoasă din punct de vedere fizic este cel mai bine reprezentată prin: o dietă echilibrată, sport constant și odihnă. O dietă echilibrată trebuie să fie realizată în așa fel încât să vă ajute să va realizați țelurile, aceasta putând fi de mai multe feluri: pentru slăbit, pentru îngrășare sau pentru dezvoltarea masei musculare. Sportul, pentru a îmbunătății starea de bine a organismului, trebuie practicat de cel puțin două ori pe săptămână.</p>
                 </article>
                 <br>
-                <article id="Scopul meu">
+                <article id="Scopulmeu">
                     <h2>Cu ce te pot ajuta?</h2>
                     <p>Dacă ești gata să renunți la rutină și să faci o schimbare spre un stil de viață mai sănătos și mai satisfăcator, dar nu știi de unde sa incepi, înseamna că ai ajuns în locul potrivit. Pe acest site o să găsești o multitudine de tipuri de antrenamente și diete gratis pe care le poți încearca pentru a-ți atinge țelurile. De alfel, dacă îți dorești să ai parte de mai multă asistență pe parcursul acestui proces, poți aplica pentru un program de antrenament personalizat, care va fi creat special pentru dorințele si nevoile tale.</p>
                 </article>
@@ -70,8 +70,7 @@
                 <li>E-mail: <a href="mailto:rares33@yahoo.com">rares33@yahoo.com</a></li>
                 <li>Telefon: 0746018999
                 </li>
-                <li><adress>Adresă: București, Sector 6, Aleea Romancierilor, Bloc Z17
-                    </adress></li>
+                <li>Adresă: București, Sector 6, Aleea Romancierilor, Bloc Z17</li>
             </ul>
         </footer>
         
