--- a/0HTML/CineSuntEu.html
+++ b/0HTML/CineSuntEu.html
@@ -161,8 +161,7 @@
                 <li>E-mail: <a href="mailto:rares33@yahoo.com">rares33@yahoo.com</a></li>
                 <li>Telefon: 0746018999
                 </li>
-                <li><adress>Adresă: București, Sector 6, Aleea Romancierilor, Bloc Z17
-                    </adress></li>
+                <li>Adresă: București, Sector 6, Aleea Romancierilor, Bloc Z17</li>
             </ul>
         </footer>
         
