Added extra lines

--- a/0HTML/Workouts-Galerie.html
+++ b/0HTML/Workouts-Galerie.html
@@ -94,6 +94,7 @@
                     <img src="../IMG/GALERIE/Picioare/PicioareBicepsFemural.jpg" alt="NO" width="600" height="400">
                         <p>Flexi pentru bicepsul femular.</p>
                 </article>
+                <h2>PENTRU ANTRENAMENTE PERSONALIZATE, COMPLETAȚI <a href="./LogIn.html">ACEST</a> FORMULAR.</h2>
             </section>
         </main>
         
