--- a/0HTML/Workouts-Slabit.html
+++ b/0HTML/Workouts-Slabit.html
@@ -87,6 +87,7 @@
                     <p><b>Dezavantaje</b>:este nevoie de acces la echipamente și o să aveți nevoie de cineva care să vă îndrume la început.</p>
                     <img src="../IMG/Greu.jpg" alt="Imaginea nu s-a putut afișa">
                 </article>
+                <h2>PENTRU ANTRENAMENTE PERSONALIZATE, COMPLETAȚI <a href="./LogIn.html">ACEST</a> FORMULAR.</h2>
             </section>
         </main>
         
