Finished content on all pages.

--- a/0HTML/CineSuntEu.html
+++ b/0HTML/CineSuntEu.html
@@ -21,7 +21,7 @@
                 </a>
                 <ul class="menu">
                     <li><a id="LogIn" href="./LogIn.html">Contact</a></li>
-                    <li><a href="./0HTML/Diets.html">Diet</a></li>
+                    <li><a href="./Diets.html">Diet</a></li>
                     <li>
                         <div>Antrenamente</div>
                         <ul class="submenu">
