--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <h2>Dorești recomandări diversificate și personalizate?</h2>
                     <p>Pentru persoanele care doresc antrenamente adaptate pentru fizicul lor, dar și diete care le vor crește rezultate exponențial în cel mai scurt timp, am creat si opțiunea de antrenor personal online. Pentru o sumă modică vă pot oferi asistență online 24/7, antrenament personalizate și diete cu rezultate dovedite. Dacă ești din București și îți dorești un antrenament cu mine, putem chiar să ne întâlnim și să te antrenez personal la una dintre sălile din zona Afi Palace Cotroceni.</p>
                 </article>
-                <h2>PENTRU ANTRENAMENTE PERSONALIZATE, COMPLETAȚI <a href="./LogIn.html">ACEST</a> FORMULAR.</h2>
+                <h2>PENTRU ANTRENAMENTE PERSONALIZATE, COMPLETAȚI <a href="./0HTML/LogIn.html">ACEST</a> FORMULAR.</h2>
             </section>
         </main>
         
