Fixed Validator Errors

--- a/0HTML/Workouts-Galerie.html
+++ b/0HTML/Workouts-Galerie.html
@@ -106,8 +106,8 @@
                 <li>E-mail: <a href="mailto:rares33@yahoo.com">rares33@yahoo.com</a></li>
                 <li>Telefon: 0746018999
                 </li>
-                <li><adress>Adresă: București, Sector 6, Aleea Romancierilor, Bloc Z17
-                    </adress></li>
+                <li>Adresă: București, Sector 6, Aleea Romancierilor, Bloc Z17
+                    </li>
                 </ul>
         </footer>
         
